Проделана работа над генератором. Добавлена глобальная защита.